If the user is logged in he can now go to review album form.

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -19,3 +19,11 @@ a {
   color: #b2b2d8;
 }
 
+.button {
+  font-size: 15px;
+  border: none;
+  background-color: black;
+  color: #b2b2d8;
+  padding: 15px 15px;
+  margin-top: 20px;
+}
