Added buttons for modifying comments that only show for the author of the comment.

--- a/front-end/src/components/Comment.module.css
+++ b/front-end/src/components/Comment.module.css
@@ -9,13 +9,27 @@
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     margin: 0 50px;
+}
+
+.rating {
+    margin-left: 100px;
 }
 
 .comment {
     text-align: left;
     margin: 0 500px;
     font-size: 18px;
+}
+
+.buttons {
+    margin-top: 18px;
+    display: flex;
+    font-size: 20px;
+}
+
+.buttons li {
+    margin-right: 5px;
 }
 
