User can now see if he has liked a comment.

--- a/front-end/src/components/Comment.module.css
+++ b/front-end/src/components/Comment.module.css
@@ -15,6 +15,7 @@
 
 .rating {
     margin-left: 100px;
+    margin-right: 10px;
 }
 
 .comment {
@@ -31,5 +32,11 @@
 
 .buttons li {
     margin-right: 5px;
+    display: flex;
+}
+
+.likes {
+    margin-top: 18px;
+    margin-left: 5px;
 }
 
