Added login error handling and made likes update real-time.

--- a/front-end/src/components/Register.module.css
+++ b/front-end/src/components/Register.module.css
@@ -24,3 +24,10 @@ input, label {
     font-size: 18px;
     margin-top: 5px;
 }
+
+.error {
+    background-color: red;
+    color: white;
+    margin-bottom: 15px;
+    border-radius: 50px;
+}
